# lazy-chemvis

./: README.md  development.py  pyproject.toml
data/: smiles_10k.csv  smiles_1k.csv
src/lazychemvis/: fit.py  transform.py
src/lazychemvis/artifacts/: pca.py
src/lazychemvis/featurizers/: ecfp.py  rdkit_descriptor.py
src/lazychemvis/helpers/: libraries.py
src/lazychemvis/plots/: scatter.py
src/lazychemvis/projectors/: pca.py  tmap_base.py  tmap_projector.py
src/lazychemvis/surrogates/: pca.py
test/pca/: axis_scaler.pkl  orig.pkl  reduced.npy  surrogate.pt
test/rdkit_descriptor/: X.npy  feature_filter.pkl  featurizer.json  imputer.pkl  scaler.pkl
tests/: test_core.py
