[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazychemvis"
version = "0.1.0"
description = "Automated 2D visualizations of chemical spaces"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name="Marina Miñarro", email="marina@ersilia.io"},
  {name="Miquel Duran-Frigola", email="miquel@ersilia.io"}
]
requires-python = ">=3.12"

dependencies = [
  "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

