[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazychemvis"
version = "0.1.0"
description = "Automated 2D visualizations of chemical spaces"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name="Marina Miñarro", email="marina@ersilia.io"},
  {name="Miquel Duran-Frigola", email="miquel@ersilia.io"}
]
requires-python = ">=3.10"

dependencies = [
  "scikit-learn==1.7.2",
  "tqdm==4.67.1",
  "rdkit==2024.3.6",
  "torch==2.9.1",
  "pandas==2.3.0",
  "datashader==0.18.2",
  "matplotlib==3.10.8"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
lazychemvis_fit = "lazychemvis.fit:main"
lazychemvis_transform = "lazychemvis.transform:main"